<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:layout_margin="7dp"
    app:cardCornerRadius="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/nomeCliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/nome_do_cliente"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nomeFixo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/nome"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="236dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/data_do_pedidos"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/produtos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="85dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/produtos"
            android:textSize="14sp"

            android:textStyle="bold"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailFixo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/nome"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailDoClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="56dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/email_do_cliente"
            android:textSize="15sp"

            android:textStyle="bold"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dataPedido"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="208dp"
            android:backgroundTint="@color/orange"
            android:text="@string/data_do_pedido"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="37dp" />

        <Button
            android:id="@+id/products"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="104dp"
            android:backgroundTint="@color/red"
            android:text="@string/produtos_ids"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/produtos"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

