<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsProductActivity">

    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="BackPage"
            android:src="@drawable/ic_arrow_back" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainToProduct"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToolBar"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageCapa"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nomeProductPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nome_do_produto"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCapa" />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nomeProductPreview" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/descricao_do_produto"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nomeProductPreview" />

        <TextView
            android:id="@+id/productCulture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/cultura"
            android:textColor="@color/primary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productDescription" />

        <TextView
            android:id="@+id/cultureDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/cultura_do_produto"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productCulture" />

        <TextView
            android:id="@+id/areaProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/rea_suportada"
            android:textColor="@color/primary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cultureDescription" />

        <TextView
            android:id="@+id/areaDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/area_suportada_do_produto"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/areaProduct" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOrcamentoFromDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/adicionar_orcamento"
            android:text="@string/adicionar_ao_or_amento"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
