<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    app:cardCornerRadius="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageProductCart"
            android:layout_width="150dp"
            android:layout_height="120dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nomeProductPreview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/nome_do_produto"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageProductCart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imageProductCart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/detailsProductButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange"
            android:text="@string/ver_detalhes"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/itemMaisVendido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/produto_mais_vendido"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="126dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

