<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.proposta.BudgetActivity">

    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="BackPage"
            android:src="@drawable/ic_arrow_back" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="618dp"
        app:layout_constraintTop_toBottomOf="@id/layoutToolBar">
        <ImageView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/fotonext"
            android:scaleType="centerCrop"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:text="@string/nome_do_cliente_orcamento"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginVertical="50dp"
            app:layout_constraintTop_toBottomOf="@id/next"/>

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="MissingConstraints,TextViewEdits"
            app:layout_constraintTop_toBottomOf="@id/next"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/edit_text_border"
            android:layout_marginVertical="70dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:text="@string/e_mail"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/nome"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="MissingConstraints,TextViewEdits"
            app:layout_constraintTop_toBottomOf="@id/nome"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/edit_text_border"
            android:layout_marginVertical="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:text="@string/telefone"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/email"/>

        <EditText
            android:id="@+id/telefone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="MissingConstraints,TextViewEdits"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/edit_text_border"
            android:layout_marginVertical="30dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enviarSolicitacaoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/adicionar_orcamento"
        android:text="@string/enviar_solicita_o"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>